--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "mobx-react": "^5.4.3",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.5",
     "recompose": "^0.30.0",
     "styled-components": "^4.1.3",
